--- a/app/src/main/res/layout/fragment_scb.xml
+++ b/app/src/main/res/layout/fragment_scb.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <FrameLayout
@@ -14,27 +14,63 @@
         <include layout="@layout/layout_actionbar" />
     </FrameLayout>
 
-    <top.smartsport.www.widget.PagerSlidingTabStrip
-        android:id="@+id/qx_tab"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="136px"
-        app:contentTextColor="@color/theme_color"
-        app:pstsIndicatorColor="@color/theme_color"
-        app:pstsIndicatorHeight="2px"
-        android:background="@color/white"
-        app:contentUnselectedTextColor="@color/black"
-        app:contentTextSize="58px"
-        app:contentSelectedTextColor="@color/theme_color"
-        app:pstsUnderlineColor="@color/text_gray"
-        app:pstsShouldExpand="true"
-        app:pstsUnderlineHeight="0px"
-        app:pstsTabPaddingLeftRight="4px"
-        android:fillViewport="false"
-        />
+        android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/qx_viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/bg_gray"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <top.smartsport.www.widget.PagerSlidingTabStrip
+                android:visibility="gone"
+                android:id="@+id/qx_tab"
+                android:layout_width="match_parent"
+                android:layout_height="136px"
+                android:background="@color/white"
+                android:fillViewport="false"
+                app:contentSelectedTextColor="@color/theme_color"
+                app:contentTextColor="@color/theme_color"
+                app:contentTextSize="58px"
+                app:contentUnselectedTextColor="@color/black"
+                app:pstsIndicatorColor="@color/theme_color"
+                app:pstsIndicatorHeight="2px"
+                app:pstsShouldExpand="true"
+                app:pstsTabPaddingLeftRight="4px"
+                app:pstsUnderlineColor="@color/text_gray"
+                app:pstsUnderlineHeight="0px" />
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/qx_viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/bg_gray" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/empty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:orientation="vertical"
+            android:scrollbars="none">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:src="@mipmap/data_empty" />
+
+            <TextView
+                android:id="@+id/tvHint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:text="还没有任何数据"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
