咨询详情，教练详情接口填充

--- a/app/src/main/res/layout/coach_details.xml
+++ b/app/src/main/res/layout/coach_details.xml
@@ -60,6 +60,8 @@
             android:text="教练的个人简介，主要介绍。教练的个人简介，主要介绍。教练的个人简介，主要介绍。教练的个人简介，主要介绍。教练的个人简介，主要介绍。教练的个人简介，主要介绍。教练的个人简介，主要介绍。教练的个人简介，主要介绍。教练的个人简介，主要介绍。教练的个人简介，主要介绍。教练的个人简介，主要介绍。教练的个人简介，主要介绍。"
             android:textColor="@color/font_gray"
             android:textSize="@dimen/text_size_notice"
+            android:maxLines="4"
+            android:ellipsize="end"
             android:layout_marginTop="@dimen/margin_left"
             android:layout_marginLeft="@dimen/margin_left"
             android:layout_marginRight="@dimen/margin_left"
