--- a/app/src/main/res/layout/qingxun_qingxunkecheng.xml
+++ b/app/src/main/res/layout/qingxun_qingxunkecheng.xml
@@ -6,8 +6,8 @@
 
     <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="140dip">
         <ImageView android:id="@+id/image" android:scaleType="fitXY" android:src="@mipmap/default_img"
-                   android:layout_width="120dip"
-                   android:layout_height="120dip" android:layout_margin="10dip"
+                   android:layout_width="324px"
+                   android:layout_height="324px" android:layout_margin="10dip"
         />
 
         <LinearLayout android:layout_marginTop="5dip" android:orientation="vertical"
