--- a/app/src/main/res/layout/activity_data_analysis.xml
+++ b/app/src/main/res/layout/activity_data_analysis.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/tab_scoreboard_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 android:layout_centerInParent="true"
                 android:text="@string/data_analysis_scoreboard"/>
             <View
@@ -35,7 +35,11 @@
                 android:layout_height="1dp"
                 android:background="@color/theme_color"
                 android:layout_alignParentBottom="true"
-                android:visibility="invisible"/>
+                android:visibility="invisible"
+                android:layout_alignStart="@id/tab_scoreboard_txt"
+                android:layout_alignEnd="@id/tab_scoreboard_txt"
+                android:layout_alignLeft="@id/tab_scoreboard_txt"
+                android:layout_alignRight="@id/tab_scoreboard_txt" />
         </com.zhy.autolayout.AutoRelativeLayout>
         <com.zhy.autolayout.AutoRelativeLayout
             android:id="@+id/tab_scorer"
@@ -48,7 +52,7 @@
                 android:id="@+id/tab_scorer_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 android:layout_centerInParent="true"
                 android:text="@string/data_analysis_scorer"/>
             <View
@@ -57,6 +61,10 @@
                 android:layout_height="1dp"
                 android:background="@color/theme_color"
                 android:layout_alignParentBottom="true"
+                android:layout_alignStart="@id/tab_scorer_txt"
+                android:layout_alignEnd="@id/tab_scorer_txt"
+                android:layout_alignLeft="@id/tab_scorer_txt"
+                android:layout_alignRight="@id/tab_scorer_txt"
                 android:visibility="invisible"/>
         </com.zhy.autolayout.AutoRelativeLayout>
         <com.zhy.autolayout.AutoRelativeLayout
@@ -70,7 +78,7 @@
                 android:id="@+id/tab_assist_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 android:layout_centerInParent="true"
                 android:text="@string/data_analysis_assist"/>
             <View
@@ -79,6 +87,10 @@
                 android:layout_height="1dp"
                 android:background="@color/theme_color"
                 android:layout_alignParentBottom="true"
+                android:layout_alignStart="@id/tab_assist_txt"
+                android:layout_alignEnd="@id/tab_assist_txt"
+                android:layout_alignLeft="@id/tab_assist_txt"
+                android:layout_alignRight="@id/tab_assist_txt"
                 android:visibility="invisible"/>
         </com.zhy.autolayout.AutoRelativeLayout>
     </com.zhy.autolayout.AutoLinearLayout>
