--- a/app/src/main/res/layout/fragment_scorer.xml
+++ b/app/src/main/res/layout/fragment_scorer.xml
@@ -30,7 +30,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/text_gray"/>
+        android:background="@color/background_gray"/>
     <top.smartsport.www.listview_pulltorefresh.PullToRefreshListView
         android:id="@+id/scorer_list"
         android:layout_width="match_parent"
