--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -99,6 +99,7 @@
         <item name="android:gravity">center</item>
         <item name="android:lines">1</item>
         <item name="android:ellipsize">end</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
 </resources>
