调整数据分析页面的字体大小和增加三个子页面之间的滑动 & 增加 比赛报名

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -302,6 +302,7 @@
         android:layout_height="45dp"
         android:layout_alignParentBottom="true"
         android:text="@string/sign_up_pay"
+        android:gravity="center"
         android:textColor="@android:color/white"
         android:background="@android:color/holo_red_light"
         android:textSize="17sp"/>
