--- a/app/src/main/res/layout/adapter_scoreboard_item.xml
+++ b/app/src/main/res/layout/adapter_scoreboard_item.xml
@@ -11,6 +11,7 @@
         style="@style/scoreboard_title_tv_style"
         android:layout_weight="0.8"
         android:textColor="@color/text_gray"
+        android:textSize="14sp"
         android:text="1" />
     <TextView
         android:id="@+id/item_name_tv"
@@ -18,29 +19,34 @@
         android:gravity="left"
         android:layout_weight="1.5"
         android:textColor="@color/text_gray"
+        android:textSize="14sp"
         android:text="球队名字" />
     <TextView
         android:id="@+id/item_result_tv"
         style="@style/scoreboard_title_tv_style"
         android:layout_weight="1.5"
         android:textColor="@color/text_gray"
+        android:textSize="14sp"
         android:text="3/2/0" />
     <TextView
         android:id="@+id/item_scored_tv"
         style="@style/scoreboard_title_tv_style"
         android:layout_weight="1"
         android:textColor="@color/text_gray"
+        android:textSize="14sp"
         android:text="8/1" />
     <TextView
         android:id="@+id/item_card_tv"
         style="@style/scoreboard_title_tv_style"
         android:layout_weight="1"
         android:textColor="@color/text_gray"
+        android:textSize="14sp"
         android:text="1红2黄" />
     <TextView
         android:id="@+id/item_score_tv"
         style="@style/scoreboard_title_tv_style"
         android:layout_weight="1"
         android:textColor="@color/text_gray"
+        android:textSize="14sp"
         android:text="13" />
 </LinearLayout>
