增加 在线视频

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -102,4 +102,11 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="online_video_tv_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/text_gray</item>
+    </style>
+
 </resources>
