我的订单，我的收藏，我的课程

--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -5,13 +5,13 @@
             android:background="#f8f8f8"
     >
 
-    <ListView
+    <top.smartsport.www.listview_pulltorefresh.PullToRefreshListView
         android:id="@+id/id_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="#f8f8f8"
         android:dividerHeight="25px"
         >
-    </ListView>
+    </top.smartsport.www.listview_pulltorefresh.PullToRefreshListView>
 
 </FrameLayout>
