--- a/app/src/main/res/layout/fragment_myzxja.xml
+++ b/app/src/main/res/layout/fragment_myzxja.xml
@@ -3,13 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <!--<top.smartsport.www.listview_pulltorefresh.PullToRefreshScrollView android:id="@+id/pullrefreshlistview"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent">-->
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone">
+    <com.handmark.pulltorefresh.library.PullToRefreshScrollView
+        android:id="@+id/pullrefreshlistview"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,6 +26,7 @@
                 android:id="@+id/rumenjigrid"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:numColumns="2"
                 android:scrollbars="none" />
 
             <TextView
@@ -44,6 +42,7 @@
                 android:id="@+id/chujigrid"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:numColumns="2"
                 android:scrollbars="none" />
 
             <TextView
@@ -59,11 +58,11 @@
                 android:id="@+id/zhongjigrid"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:numColumns="2"
                 android:scrollbars="none" />
 
         </LinearLayout>
-    </FrameLayout>
-    <!--</top.smartsport.www.listview_pulltorefresh.PullToRefreshScrollView>-->
+    </com.handmark.pulltorefresh.library.PullToRefreshScrollView>
     <RelativeLayout
         android:id="@+id/mykcempty"
         android:layout_width="match_parent"
