--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,6 +15,7 @@
         app:layout_auto_baseheight="width"
         android:layout_marginTop="@dimen/list_item_top"
         android:layout_marginLeft="@dimen/list_item_top"
+        android:scaleType="fitXY"
         android:src="@mipmap/tuijian_touxiang6" />
 
     <TextView
