--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -13,5 +13,51 @@
         android:dividerHeight="25px"
         >
     </top.smartsport.www.listview_pulltorefresh.PullToRefreshListView>
+    <RelativeLayout
+        android:id="@+id/mykcempty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <TextView android:visibility="invisible"
+            android:id="@+id/gojoinlesson"
+            android:layout_width="600px"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="30dip"
+            android:background="@mipmap/btn_long"
+            android:gravity="center"
+            android:text="去查找青训课程"
+            android:textColor="@android:color/white"
+            android:textSize="19dip" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/gojoinlesson">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="30px"
+                    android:visibility="invisible"
+                    android:src="@mipmap/myfavempty" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="还没有任何订单"
+                    android:textColor="@color/text_gray"
+                    android:textSize="17dip" />
+
+            </LinearLayout>
+        </RelativeLayout>
+    </RelativeLayout>
 </FrameLayout>
